fix header width on mobile

--- a/src/GameMetadata.css
+++ b/src/GameMetadata.css
@@ -1,5 +1,5 @@
 .game-metadata {
-    width: 100vw;
+    width: 100%;
     height: 2em;
     background-color: var(--primary-scorecard-color);
     box-sizing: border-box;
